--- a/floridaLSTM.ipynb
+++ b/floridaLSTM.ipynb
@@ -2217,7 +2217,7 @@
     }
    ],
    "source": [
-    "arima_model = ARIMA(residuals_test, order=(5, 0, 0))  # Note 'd' parameter is now 1\n",
+    "arima_model = ARIMA(residuals_test, order=(5, 0, 0))  # Note 'd' parameter is now 0 since the data is stationary.\n",
     "arima_model_fit = arima_model.fit()\n",
     "arima_model_fit.summary()"
    ]
@@ -2352,6 +2352,24 @@
     "print(\"ARIMA Adjusted MSE:\", mse_arima)\n",
     "print(\"ARIMA Adjusted RMSE:\", rmse_arima)\n",
     "print(\"ARIMA Adjusted MAE:\", mae_arima)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validate model on other dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "florida = pd.read_csv('https://raw.githubusercontent.com/Zhengnan817/capstone/main/Dataset/florida_1998_to_2019.csv')\n",
+    "temperature = pd.read_csv('https://raw.githubusercontent.com/Juanfra21/mosquito-population-model/main/data/weather_data.csv')\n",
+    "https://raw.githubusercontent.com/Juanfra21/mosquito-population-model/main/data/mosquito_pop_weather_data.csv"
    ]
   }
  ],
