--- a/floridaLSTM copy.ipynb
+++ b/floridaLSTM copy.ipynb
@@ -3105,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3130,7 @@
     "plt.ylabel('Residuals')  # 设置y轴标签\n",
     "plt.axhline(y=0, color='r', linestyle='--')  # 画一条红色虚线在y=0\n",
     "plt.grid(True)  # 显示网格\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
